2009-07-24  Sebastien Pouliot  <sebastien@ximian.com>

	* Helper.cs: Remove unused code.
	* ManagedXamlLoader.cs: Fix typo.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-07-20  Chris Toshok  <toshok@ximian.com>

	* ApplicationLauncher.cs (ApplicationLauncher.CreateXamlLoader):
	add a resourceBase, and pass it along to
	XamlLoader.CreateManagedXamlLoader.

	* GeneratedPInvokes.cs: regen.

	* ManagedXamlLoader.cs (ManagedXamlLoader.ctor): add a
	resourceBase argument.
	(ManagedXamlLoader.TrySetExpression): remove one level of
	redundant nesting.

	* NativeMethods.cs: add resourceBase to the GetResourceCallback
	delegate type.

	* XamlLoaderCallbacks.cs: add resourceBase parameters everywhere.

2009-07-17  Larry Ewing  <lewing@novell.com>

	* MoonError.cs: always at least copy the exception message.

2009-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Kind.cs: Regenerated.

2009-07-15  Jackson Harper  <jackson@ximian.com>

	* XamlLoaderCallbacks.cs:
	* ManagedXamlLoader.cs: Consolidate some of the data passed to
	every callback and not used much into a struct.

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

2009-07-13  Jackson Harper  <jackson@ximian.com>

	* MoonError.cs: we need to pass the message back to unmanaged
	also.

2009-07-13  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: Throw the proper exception here.

2009-07-13  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: throw a parsing exception if we there is
	no key for a resource, this will get turned into a MoonError.
	* MoonError.cs: Get the error code from the xamlparseexception
	
2009-07-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Kind.cs: Regenerated.
